<resources>
    <string name="app_name">CPS731Project</string>
    <string name="settings">Settings</string>
    <string name="display_name">Display Name</string>
    <string name="ex_john_smith">Ex. John Smith</string>
    <string name="save_preferences">Save Preferences</string>
    <string name="textview">TextView</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="create_restaurant">Create Restaurant</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="province">Province</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="phone">Phone</string>
    <string name="postal_code">Postal Code</string>
    <string name="e_mail">E-mail</string>
    <string name="website">Website</string>
    <string name="list_restaurants">List Restaurants</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="create_an_account">Create an Account</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="u_last_name">Last Name</string>
    <string name="u_first_name">First Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="waiter">Waiter</string>
    <string name="customer">Customer</string>
    <array name="countries">
        <item>Canada</item>
        <item>United States</item>
    </array>
</resources>