<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Settings">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings" />

    <TextView
        android:id="@+id/txtDisplayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_name" />

    <EditText
        android:id="@+id/edtDisplayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ex_john_smith"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <Switch
        android:id="@+id/swNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show Notifications"
        android:textOff="OFF"
        android:textOn="ON" />

    <TextView
        android:id="@+id/txtShowNotifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_preferences" />

</LinearLayout>